--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-.idea
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -103,3 +102,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# IDE
+.idea/
+target/
